adding background and flexbox

--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -11,12 +11,29 @@
     <style type="text/css">
         body {
             font-family: sans-serif;
+            background: url(bg.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        .box {
+            width: 100px;
+            height: 100px;
+            background-color: rgba(0, 0, 0, 0.281);
+            border: 4px black solid;
+            border-radius: 20%;
+        }
+
+        .flex{
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
 
 <body>
-    hey
+
+    <div class="box flex"> <p>what</p></div>
 
 
 
