--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -15,25 +15,90 @@
             background-size: cover;
         }
 
-        .box {
-            width: 100px;
-            height: 100px;
+        .key {
+            width: 130px;
+            height: 130px;
             background-color: rgba(0, 0, 0, 0.281);
-            border: 4px black solid;
+            border: 3px black solid;
             border-radius: 20%;
-        }
 
-        .flex{
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        .flex {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: space-around;
+        }
+
+        kbd {
+            font-size: 38px;
+            color: white;
+        }
+
+        .sound {
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 0.2px;
+            color: #ffc600;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="box flex"> <p>what</p></div>
+
+    <div class="flex">
+        <div data-key="65" class="key">
+            <kbd>A</kbd>
+            <span class="sound">clap</span>
+        </div>
+        <div data-key="83" class="key">
+            <kbd>S</kbd>
+            <span class="sound">hihat</span>
+        </div>
+        <div data-key="68" class="key">
+            <kbd>D</kbd>
+            <span class="sound">kick</span>
+        </div>
+        <div data-key="70" class="key">
+            <kbd>F</kbd>
+            <span class="sound">openhat</span>
+        </div>
+        <div data-key="71" class="key">
+            <kbd>G</kbd>
+            <span class="sound">boom</span>
+        </div>
+        <div data-key="72" class="key">
+            <kbd>H</kbd>
+            <span class="sound">ride</span>
+        </div>
+        <div data-key="74" class="key">
+            <kbd>J</kbd>
+            <span class="sound">snare</span>
+        </div>
+        <div data-key="75" class="key">
+            <kbd>K</kbd>
+            <span class="sound">tom</span>
+        </div>
+        <div data-key="76" class="key">
+            <kbd>L</kbd>
+            <span class="sound">tink</span>
+        </div>
+    </div>
+
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
 
 
 
