--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -29,9 +29,9 @@
 
         .flex {
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
-            align-content: space-around;
+            height: 100vh;
         }
 
         kbd {
