--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -21,10 +21,17 @@
             background-color: rgba(0, 0, 0, 0.281);
             border: 3px black solid;
             border-radius: 20%;
+            transition: 0.07s;
 
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        .playing {
+            transform: scale(1.1);
+            border-color: #36bd53;
+            box-shadow: 0 0 8px #36bd53;
         }
 
         .flex {
@@ -43,7 +50,7 @@
             font-size: 20px;
             text-transform: uppercase;
             letter-spacing: 0.2px;
-            color: #ffc600;
+            color: #36bd53;
         }
     </style>
 </head>
