ready to add javascript

--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -106,7 +106,7 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="sounds/tom.wav"></audio>
     <audio data-key="76" src="sounds/tink.wav"></audio>
-
+    <!-- Visit http://keycode.info/ to understand better which key belongs to what -->
 
 
     <script type="text/javascript">
