--- a/01 - JavaScript Drum Kit/keyboard-drum.html
+++ b/01 - JavaScript Drum Kit/keyboard-drum.html
@@ -24,6 +24,7 @@
         justify-content: space-evenly;
         align-items: center;
         height: 100vh;
+        z-index: -2;
       }
 
       kbd {
@@ -31,15 +32,14 @@
         color: white;
 
         position: relative;
-        top:20px; 
-        left:50%;
+        top: 20px;
+        left: 50%;
       }
 
-      span{
-
+      span {
         position: relative;
-        top:60px;    
-        right:10%; 
+        top: 60px;
+        right: 10%;
       }
 
       .key {
@@ -49,14 +49,7 @@
         border: 3px black solid;
         border-radius: 20%;
         z-index: -1;
-      }
-
-      .transparentDiv{
-        width: 120px;
-        height: 120px;
-        background-color: rgba(0, 0, 0, 0.034);
-        border-radius: 20%;
-        z-index: 2;
+        transition-duration: 0.8ms;
       }
 
       .playing {
@@ -76,10 +69,8 @@
 
   <body>
     <div class="flex">
-      <div class="transparentDiv">
-          <div data-key="65" class="key">
-            <kbd>A</kbd> <span class="sound">clap</span>
-          </div>
+      <div data-key="65" class="key" id="test1">
+        <kbd>A</kbd> <span class="sound">clap</span>
       </div>
       <div data-key="83" class="key">
         <kbd>S</kbd> <span class="sound">hihat</span>
